2011-03-26  Patrick Gansterer  <paroga@webkit.org>

        Unreviewed WinCE build fix for r82000.

        * platform/wince/FileSystemWinCE.cpp:
        (WebCore::openFile): Added missing function.

2011-03-25  Kevin Ollivier  <kevino@theolliviers.com>

        [wx] Build fix, don't use the new FPD implementation yet, until we can merge ours with it.

        * platform/graphics/FontPlatformData.h:

2011-03-25  Jer Noble  <jer.noble@apple.com>

        Reviewed by Eric Carlson.

        MediaPlayerPrivateQuickTimeVisualContext should use the Application Cache during load.
        https://bugs.webkit.org/show_bug.cgi?id=57047

        No new tests.
        
        When loading a URL, checkk osee if the Appplication Cache has a version of that URL
        stored; if so, use the local path to that cached media instead of the remote URL.

        * platform/graphics/win/MediaPlayerPrivateQuickTimeVisualContext.cpp:
        (WebCore::MediaPlayerPrivateQuickTimeVisualContext::loadInternal):
        * platform/graphics/win/QTMovie.cpp:
        (QTMovie::loadPath):
        * platform/graphics/win/QTMovie.h:

2011-03-25  Dan Bernstein  <mitz@apple.com>

        Reviewed by Darin Adler.

        <rdar://problem/9134330> Missing expansion before ideograph at the beginning or end of a text run
        https://bugs.webkit.org/show_bug.cgi?id=57106

        Test: fast/text/justify-ideograph-leading-expansion.html

        * platform/graphics/TextRun.h:
        Replaced TrailingExpansionBehavior enum with ExpansionBehavior flags.
        (WebCore::TextRun::TextRun): Constructors now take an expansionBehavior parameter.
        (WebCore::TextRun::allowsLeadingExpansion): Added this accessor.
        (WebCore::TextRun::allowsTrailingExpansion): Changed to use the m_expansionBehavior member.
        * platform/graphics/WidthIterator.cpp:
        (WebCore::WidthIterator::WidthIterator): Initialize m_isAfterExpansion from the TextRun, allowing