@@ -1,5 +1,11 @@
 2011-03-26  Patrick Gansterer  <paroga@webkit.org>
 
+        Unreviewed EFL and WinCE build fix for r81977.
+
+        * platform/graphics/FontPlatformData.h:
+
+2011-03-26  Patrick Gansterer  <paroga@webkit.org>
+
         Unreviewed WinCE build fix for r82000.
 
         * platform/wince/FileSystemWinCE.cpp:
